Fixed missing backgropund strip on Firefox mobile

--- a/css/generic/skeleton/rules-gateway.css
+++ b/css/generic/skeleton/rules-gateway.css
@@ -88,8 +88,9 @@
     font-style: italic;
     text-shadow: 2px 2px 2px #c5c5c5;
     background-color: rgba(238, 238, 238, 0.34);
+    padding: 0.5em 1em;
 }
 
 .gateway .footer p {
-    padding: 0.5em 1em;
+    padding-top: 0.5em;
 }
